--- a/Data Scapping/LaLiga_allseasons.ipynb
+++ b/Data Scapping/LaLiga_allseasons.ipynb
@@ -2870,7 +2870,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "laliga_seasons_df.to_csv('laliga_seasons_df.csv', index=False)"
+    "laliga_seasons_df.to_csv('Scapping Data/laliga_seasons_df.csv', index=False)"
    ]
   },
   {
@@ -2898,7 +2898,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
